:bug: fix: trocar bb por gb

--- a/tratamento.ipynb
+++ b/tratamento.ipynb
@@ -540,7 +540,7 @@
    "source": [
     "df['memoria'] = (\n",
     "    df['marca']\n",
-    "      .str.extract(r'(\\d+\\s*[Gg][Bb])', flags=re.IGNORECASE, expand=False)\n",
+    "      .str.extract(r'(\\d+\\s*[Gg][gb])', flags=re.IGNORECASE, expand=False)\n",
     "      .str.replace(r'\\s+', '', regex=True)\n",
     "      .str.upper()\n",
     ")\n",
